--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 .header {
     min-height: 5rem;
-    background-color: #519872;
+    background-color: #7EE8FA;
     display: flex;
     justify-content: space-between;
     align-items: center;
