--- a/style.css
+++ b/style.css
@@ -23,3 +23,26 @@ body {
     display: flex;
     gap: 3rem;
 }
+
+h5 {
+    font-size: 2rem;
+    color: blue;
+}
+.cyan {
+    color: cyan;
+    background-color: beige;
+}
+.navy {
+    color: navy;
+    background-color: beige;
+}
+.aqua {
+    color: aqua;
+    background-color: beige;
+
+}
+.midnight {
+    color: midnightblue;
+    background-color: beige;
+
+}
