--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@ body {
 
 .footer-text {
     padding: 24px;
-    background: rgb(72, 72, 146);
+    background: linear-gradient(to right, rgb(129, 129, 173), rgb(57, 57, 167)) ;
     text-align: center;
 }
