--- a/style.css
+++ b/style.css
@@ -65,3 +65,14 @@ h5 {
     background-color: beige;
 
 }
+    
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.gallery__big {
+    grid-row: span 2;
+}
