--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+img {
+    max-width: 100%;
+}
+
 .header {
     min-height: 5rem;
     background-color: #7EE8FA;
@@ -22,4 +26,15 @@ body {
 .nav {
     display: flex;
     gap: 3rem;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.gallery__big {
+    grid-row: span 2;
 }
